--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -65,7 +65,7 @@
                 <div class="dashboard-info-pane" id="dashboard-info-pane">
                     <div class="dashboard-info-menu">
                         <li id="dashboard-commands-tab">Commands</li>
-                        <li id="dashboard-rules-tab">Rules</li>
+                        <li id="dashboard-patch-notes-tab">Patch Notes</li>
                         <li id="dashboard-partners-tab">Partners</li>
                     </div>
                     <div id="dashboard-partners" class="hidden">
@@ -131,70 +131,18 @@
                             </div>
                         </div>
                     </div>
-                    <div id="dashboard-rules" class="hidden">
-                        <div class="dashboard-rules-description">
-                            <p class="dashboard-lightbold">Welcome to a simple yet sophisticated social medium, where wisdom is cherished. Here is a fair and forgiving place, so if you get punished, you probably weren't being very smart.</p>
-                        </div>
-                        <div class="dashboard-rule-group">
-                            <div class="dashboard-rule-title">
-                                <h2><span>Rule Number 1</span></h2>
-                            </div>
-                            <div class="dashboard-rule">
-                                <p>There is nothing so confining as the prisons of our own perceptions.</p>
-                            </div>
-                        </div>
-                        <div class="dashboard-rule-group">
-                            <div class="dashboard-rule-title">
-                                <h2><span>Rule Number 2</span></h2>
-                            </div>
-                            <div class="dashboard-rule">
-                                <p>Pride goes before destruction, a haughty spirit before a fall.</p>
-                            </div>
-                        </div>
-                        <div class="dashboard-rule-group">
-                            <div class="dashboard-rule-title">
-                                <h2><span>Rule Number 3</span></h2>
-                            </div>
-                            <div class="dashboard-rule">
-                                <p>No matter how hot your anger is, it cannot cook yams.</p>
-                            </div>
-                        </div>
-                        <div class="dashboard-rule-group">
-                            <div class="dashboard-rule-title">
-                                <h2><span>Rule Number 4</span></h2>
-                            </div>
-                            <div class="dashboard-rule">
-                                <p>Better a witty fool than a foolish wit.</p>
-                            </div>
-                        </div>
-                        <div class="dashboard-rules-report-title">
-                            <h2><span>Report System</span></h2>
-                        </div>
-                        <div class="dashboard-rules-report-body">
-                            <div class="dashboard-rules-report-paragraph">
-                                <p>All reports will be evaluted by rational people, to determine their gravity.</p>
-                            </div>
-                            <div class="dashboard-rules-report-paragraph">
-                                <p>This can result in 1 of 3 scenarios:</p>
-                            </div>
-                            <div class="dashboard-rules-report-paragraph">
-                                <p>1 - (The most common scenario) It was a false report and no one will be affected. Unless the false reporter is a serial false reporter, wherein the serial false reporter will be punished.</p>
-                            </div>
-                            <div class="dashboard-rules-report-paragraph">
-                                <p>2 - The report was justified and the reported account will be punished temporarily (See Below).</p>
-                            </div>
-                            <div class="dashboard-rules-report-paragraph">
-                                <p>3 - If the report is sufficiently serious, the reported account could be locked out. Leaving their profile desolate, and their e-mail address unusable. This is a rare and unfortunate scenario.</p>
-                            </div>
-                            <div class="dashboard-rules-report-paragraph">
-                                <p><u>Some possible punishments</u></p>
-                                <ul>
-                                    <li>Imposing a character limit</li>
-                                    <li>Renaming your account</li>
-                                    <li class="dashboard-rules-li-pink"><span>Locking your customisation to a random color</span></li>
-                                    <li>Distorting your UI</li>
-                                </ul>
-                            </div>
+                    <div id="dashboard-patch-notes" class="hidden">
+                        <div class="dashboard-patch">
+                            <div class="dashboard-patch-title">1.0.0 Patch Notes [The Social Update]</div>
+                            <ul class="dashboard-notes">
+                                <li>@Mentions are now color coded.</li>
+                                <li>We have splash text on the home screen. Yes, we are 100% copying minecraft.</li>
+                                <li>We deleted the TOS.</li>
+                                <li>New (Obvious) Feature: Patch Notes.</li>
+                                <li>Bug Warning: Please make a post if the left side of your homepage looks smaller all of a sudden. Be sure to include which device it looks smaller on.</li>
+                                <li>Made it easier for Spiders to crawl the site.</li>
+                                <li>People can now access their previous posts from the #Post area.</li>
+                            </ul>
                         </div>
                     </div>
                     <div id="dashboard-commands">
