--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -147,6 +147,8 @@ input:focus:-ms-input-placeholder {
 }
 
 .left {
+    display: flex;
+    flex-direction: column;
     margin-top: 1.7vw;
     width: 22.5%;
 }
@@ -733,8 +735,8 @@ input:focus:-ms-input-placeholder {
 
 .sort .post-link {
     font-size: 85px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .sort .post-link:hover {
@@ -759,6 +761,44 @@ input:focus:-ms-input-placeholder {
 .account-links a span:hover {
     color: #F28500;
     /*box-shadow: inset 0 -22px 0 #F28500;*/
+}
+
+#splash-text {
+    font-family: "Poppins", sans-serif;
+    font-size: 36px;
+    font-weight: 800;
+    color: #f28500dd;
+    rotate: -10deg;
+    flex-grow: 1;
+    animation: pop 1s infinite;
+    -webkit-animation: pop 1s infinite;
+    margin-top: 20px;
+    backface-visibility: hidden;
+    display: table;
+}
+
+@keyframes pop {
+    from {
+        transform:scale(0.95) translateZ(0);
+    }
+    50% {
+        transform:scale(1) translateZ(0);
+    }
+    to {
+        transform:scale(0.95) translateZ(0);
+    }
+}
+
+@-webkit-keyframes pop {
+    from {
+        -webkit-transform:scale(0.95) translateZ(0);
+    }
+    50% {
+        -webkit-transform:scale(1) translateZ(0);
+    }
+    to {
+        -webkit-transform:scale(0.95) translateZ(0);
+    }
 }
 
 .bottom {
@@ -853,7 +893,7 @@ input:focus:-ms-input-placeholder {
     .left {
         width: 100%;
         margin: 0;
-        border-bottom: 6px solid #f28500;
+        border-bottom: 6px solid #000;
     }
 
     .sort {
@@ -929,6 +969,10 @@ input:focus:-ms-input-placeholder {
 
     .account-links a span{
         white-space: nowrap;
+    }
+
+    #splash-text {
+        display: none;
     }
 
     .content {
@@ -1296,14 +1340,20 @@ input:focus:-ms-input-placeholder {
     }
 }
 
-@media screen and (max-height: 700px) and (min-width: 1096px) {
+@media screen and (max-height: 700px) {
+    .post-link {
+        font-size: 9vh;
+        margin: 4vh 2vh;
+    }
+}
+
+@media screen and (max-height: 800px) and (min-width: 1096px) {
     .side-title {
         font-size: 4.5vh;
     }
 
     .sort .post-link {
         font-size: 9vh;
-        margin: 4vh 2vh 4vh 2vh;
     }
 
     .sort {
@@ -1311,8 +1361,17 @@ input:focus:-ms-input-placeholder {
     }
 
     .sort a {
-        font-size: 3vw;
+        font-size: 4.5vh;
         margin: 1vh;
+    }
+
+    .sort .post-link {
+        margin-top: 2vh;
+        margin-bottom: 2vh;
+    }
+
+    .sort .dashboard-link {
+        margin-top: 0;
     }
 
     .account-links {
@@ -1320,8 +1379,11 @@ input:focus:-ms-input-placeholder {
     }
 
     .sort .dashboard-link {
-        font-size: 3vw;
-        margin-top: 2vh;
+        font-size: 4.5vh;
+    }
+
+    #splash-text {
+        font-size: 4.5vh;
     }
 }
 
