--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <div class="navbar">
             <a href="/" class="logo"><img src="{% static 'images/favicon.svg' %}" alt="SHOWGAUGE"></a>
             <form method="GET">
-                <input type="text" name="search" id="search" placeholder="Enter a search word..." autocomplete="off">
+                <input type="text" name="search" id="search" placeholder="Enter a search term..." autocomplete="off">
             </form>
         </div>
         <hr class="navline" id="navline">
@@ -50,11 +50,13 @@
                 <a href="/post/write" class="post-link"><span>#Post</span></a>
                 {% if user.is_authenticated %}
                 <a href="/{{ user.display_name }}/dashboard" class="dashboard-link"><span><span class="dashboard-your">Your<br></span>Dashboard</span></a>
+                <a href="/{{ user.display_name }}/dashboard" id="splash-text">Check out the Patch Notes!</a>
                 {% else %}
                 <div class="account-links">
                     <a href="login/"><span>Log in</span></a>
                     <a href="create-profile/"><span>Create Profile</span></a>
                 </div>
+                <a href="create-profile/" id="splash-text">Check out the Patch Notes!</a>
                 {% endif %}
             </div>
         </div>
