--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -66,7 +66,7 @@
                     <div class="dashboard-info-menu">
                         <li id="dashboard-commands-tab">Commands</li>
                         <li id="dashboard-patch-notes-tab">Patch Notes</li>
-                        <li id="dashboard-partners-tab">Partners</li>
+                        <li id="dashboard-partners-tab">Sponsors</li>
                     </div>
                     <div id="dashboard-partners" class="hidden">
                         <div class="dashboard-partner-main-title"><h1>If you like Bantopia check out these servers and websites!</h1></div>
@@ -133,6 +133,15 @@
                     </div>
                     <div id="dashboard-patch-notes" class="hidden">
                         <div class="dashboard-patch">
+                            <div class="dashboard-patch-title">1.0.1 Patch Notes</div>
+                            <ul class="dashboard-notes">
+                                <li>Fixed a minor bug that allowed users to DDoS the server.</li>
+                                <li>We changed the Partners section to Sponsors.</li>
+                                <li>Splash texts now update randomly, gotta catch 'em all.</li>
+                                <li>You can now edit Question posts as drafts.</li>
+                            </ul>
+                        </div>
+                        <div class="dashboard-patch">
                             <div class="dashboard-patch-title">1.0.0 Patch Notes [The Social Update]</div>
                             <ul class="dashboard-notes">
                                 <li>@Mentions are now color coded.</li>
@@ -142,6 +151,7 @@
                                 <li>Bug Warning: Please make a post if the left side of your homepage looks smaller all of a sudden. Be sure to include which device it looks smaller on.</li>
                                 <li>Made it easier for Spiders to crawl the site.</li>
                                 <li>People can now access their previous posts from the #Post area.</li>
+                                <li>Changed "Search word" to "Search term".</li>
                             </ul>
                         </div>
                     </div>
