--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -133,11 +133,17 @@
                     </div>
                     <div id="dashboard-patch-notes" class="hidden">
                         <div class="dashboard-patch">
+                            <div class="dashboard-patch-title">1.0.2 Patch Notes (Facepalm Update)</div>
+                            <ul class="dashboard-notes">
+                                <li>Bug Fixed: The splash text wasn't updating randomly.</li>
+                            </ul>
+                        </div>
+                        <div class="dashboard-patch">
                             <div class="dashboard-patch-title">1.0.1 Patch Notes</div>
                             <ul class="dashboard-notes">
                                 <li>Fixed a minor bug that allowed users to DDoS the server.</li>
                                 <li>We changed the Partners section to Sponsors.</li>
-                                <li>Splash texts now update randomly, gotta catch 'em all.</li>
+                                <li>The splash text now updates randomly, gotta catch 'em all.</li>
                                 <li>You can now edit Question posts as drafts.</li>
                             </ul>
                         </div>
