--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -133,7 +133,16 @@
                     </div>
                     <div id="dashboard-patch-notes" class="hidden">
                         <div class="dashboard-patch">
-                            <div class="dashboard-patch-title">1.0.2 Patch Notes (Facepalm Update)</div>
+                            <div class="dashboard-patch-title">1.1.0 Patch Notes [IPad Update]</div>
+                            <ul class="dashboard-notes">
+                                <li>Posts are now IPad friendly. Request more device support at support@bantopia.com.</li>
+                                <li>Messages now have smaller names over them.</li>
+                                <li>Mobile Context Page has been tweaked for optimum aesthetics.</li>
+                                <li>Post authors now have their names lit up in their color on the context page.</li>
+                            </ul>
+                        </div>
+                        <div class="dashboard-patch">
+                            <div class="dashboard-patch-title">1.0.2 Patch Notes [Facepalm Update]</div>
                             <ul class="dashboard-notes">
                                 <li>Bug Fixed: The splash text wasn't updating randomly.</li>
                             </ul>
