--- a/static/styles/comm.css
+++ b/static/styles/comm.css
@@ -27,13 +27,13 @@ sup {
     width: 4px;
 }
   
-  /* Track */
-  ::-webkit-scrollbar-track {
+/* Track */
+::-webkit-scrollbar-track {
     background: none;
 }
   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+/* Handle */
+::-webkit-scrollbar-thumb {
     background: #ececec;
     border-radius: 10px;
 }
@@ -180,10 +180,6 @@ sup {
     font-size: 30px;
 }
 
-.content-author span {
-    color: #F28500;
-}
-
 .header-line {
     margin-top: 25px;
     border: 5px solid black;
@@ -235,6 +231,7 @@ sup {
     font-size: 19px;
     color: #000;
     padding: 10px;
+    word-wrap: break-word;
 }
 
 .pingster {
@@ -443,6 +440,7 @@ sup {
     font-size: 22px;
     color: #000;
     padding: 15px;
+    word-wrap: break-word;
 }
 
 .header-shadow-DE {
@@ -529,9 +527,6 @@ sup {
 }
 
 .author {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     cursor: pointer;
     font-weight: 700;
     width: 100%;
@@ -1294,14 +1289,14 @@ input:focus:-ms-input-placeholder {
     .option {
         display: flex;
         flex-direction: column;
-        padding: 5px;
+        padding: 1.4vw;
         background-color: white;
     }
 
     .option {
-        border-bottom: 5px solid #000;
+        border-bottom: 1.4vw solid #000;
         border-top: none;
-        border-right: 5px solid #000;
+        border-right: 1.4vw solid #000;
         border-left: none;
     }
 
@@ -1326,20 +1321,23 @@ input:focus:-ms-input-placeholder {
 
     .mobile-header {
         border-bottom: 0;
-        border-left: 5px solid black;
-        padding: 5px 0;
+        border-left: 1.4vw solid black;
+        padding: 1.4vw 0;
         width: 100%;
     }
 
     .content-toggle {
         display: flex;
-        width: 40px;
+        width: 10vw;
     }
 
     .toggle {
-        margin-left: 15px;
-        margin-right: 15px;
-        width: 20px;
+        display: flex;
+        margin-left: 3.5vw;
+        margin-right: 3.5vw;
+        width: 10vw;
+        align-items: center;
+        justify-content: center;
     }
 
     #content-bottom-level {
@@ -1357,7 +1355,7 @@ input:focus:-ms-input-placeholder {
     }
 
     .toggle img {
-        width: 36px;
+        width: 7vw;
         rotate: 180deg;
     }
 
@@ -1537,44 +1535,103 @@ input:focus:-ms-input-placeholder {
 
 @media only screen and (max-width: 960px) {
     .option h1 {
-        padding: 10px;
-        font-size: 24px;
+        padding: 1.4vw;
+        font-size: 5vw;
+    }
+
+    /* width */
+    .content-display::-webkit-scrollbar {
+        width: 0;
+    }
+    
+    /* Track */
+    .content-display::-webkit-scrollbar-track {
+        background: none;
+    }
+    
+    /* Handle */
+    .content-display::-webkit-scrollbar-thumb {
+        background-color: none;
     }
 
     .content-title {
-        margin-top: 25px;
-        margin-left: 6vw;
-        margin-right: 6vw;
+        margin-top: 0;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .content-title h1 {
-        font-size: 36px;
+        font-size: 9vw;
+    }
+
+    .post-type-span {
+        display: block;
+        text-align: center;
+        width: 100%;
+        color: white;
+        border-bottom: 1.4vw solid #000;
+    }
+
+    .post-type-span-theory {
+        color: black;
+    }
+
+    .post-title-colon {
+        display: none !important;
+    }
+
+    .post-title-span {
+        display: block;
+        padding: 1.5vw 4.5vw 1.5vw 4.5vw;
+        border-left: 1.4vw solid #f28500;
     }
 
     .post-title-DE {
-        box-shadow: inset 0 -17px 0 #F28500;
+        background-color: #F28500;
     }
 
     .post-title-TH {
-        box-shadow: inset 0 -17px 0 #30f200;
+        background-color: #30f200;
     }
 
     .post-title-QU {
-        box-shadow: inset 0 -17px 0 #7f24ff;
+        background-color: #7f24ff;
+    }
+
+    .declaration-title {
+        border-color: #f28500;
+    }
+
+    .theory-title {
+        border-color: #30f200;
+    }
+
+    .question-title {
+        border-color: #7f24ff;
     }
 
     .content-author {
-        margin-left: 6vw;
+        border-top: 1.4vw solid #000;
+        margin: 0;
+        padding-left: 2vw;
+        border-left: 4vw solid #000;
     }
 
     .content-author h2 {
-        font-size: 16px;
+        font-size: 4.4vw;
     }
 
     .content-paragraph {
-        margin-left: 6vw;
-        margin-right: 6vw;
-        font-size: 16px;
+        margin: 0;
+        padding-top: 3vw;
+        padding-left: 5vw;
+        padding-right: 5vw;
+        font-size: 4.4vw;
+    }
+
+    .header-line {
+        border-width: 0.7vw;
+        margin: 0;
     }
 
     .header {
@@ -1591,86 +1648,129 @@ input:focus:-ms-input-placeholder {
 
     .mobile-header h2 {
         padding: 1.2vw;
-        font-size: 16px;
+        font-size: 4.3vw;
         text-align: center;
     }
 
     .mobile-header-shadow-DE {
-        box-shadow: inset 0 -8px 0 #F28500;
+        box-shadow: inset 0 -2vw 0 #F28500;
     }
 
     .mobile-header-shadow-TH {
-        box-shadow: inset 0 -8px 0 #30f200;
+        box-shadow: inset 0 -2vw 0 #30f200;
     }
 
     .mobile-header-shadow-QU {
-        box-shadow: inset 0 -8px 0 #7f24ff;
+        box-shadow: inset 0 -2vw 0 #7f24ff;
+    }
+
+    .contrib-user {
+        font-size: 3.8vw;
+    }
+
+    .contrib-users {
+        border-width: 1.4vw;
+    }
+
+    .online-beacon {
+        height: 6vw;
+        width: 6vw;
+        border-radius: 1.7vw;
+    }
+
+    .mobilesters {
+        gap: 1.4vw;
+        border-width: 1.4vw;
+        height: 11.5vw;
+    }
+
+    .mobile-onlinester {
+        gap: 1.4vw;
+    }
+
+    .mobile-onlinester h1 {
+        font-size: 6.4vw;
+    }
+
+    .onlinester-beacon {
+        height: 9vw;
+        width: 9vw;
+        border-radius: 1.2vw;
+    }
+
+    #online-reading-mobile {
+        font-size: 6.4vw;
+    }
+
+    .mobile-pingster h1 {
+        font-size: 6.4vw;
     }
 
     .author-shadow-OR {
-        box-shadow: inset 0 -1.7vw 0 #F28500;
+        box-shadow: inset 0 -1.5vw 0 #F28500;
     }
     
     .author-shadow-BL {
-        box-shadow: inset 0 -1.7vw 0 #00baf2;
+        box-shadow: inset 0 -1.5vw 0 #00baf2;
     }
     
     .author-shadow-GR {
-        box-shadow: inset 0 -1.7vw 0 #0fb300;
+        box-shadow: inset 0 -1.5vw 0 #0fb300;
     }
     
     .author-shadow-RE {
-        box-shadow: inset 0 -1.7vw 0 #fb3a3a;
+        box-shadow: inset 0 -1.5vw 0 #fb3a3a;
     }
     
     .author-shadow-PU {
-        box-shadow: inset 0 -1.7vw 0 #5934ff;
+        box-shadow: inset 0 -1.5vw 0 #5934ff;
     }
     
     .author-shadow-BR {
-        box-shadow: inset 0 -1.7vw 0 #884A39;
+        box-shadow: inset 0 -1.5vw 0 #884A39;
     }
     
     .author-shadow-MA {
-        box-shadow: inset 0 -1.7vw 0 #ac0000;
+        box-shadow: inset 0 -1.5vw 0 #ac0000;
     }
     
     .author-shadow-DR {
-        box-shadow: inset 0 -1.7vw 0 #025464;
+        box-shadow: inset 0 -1.5vw 0 #025464;
     }
 
     .message {
         font-size: 10vw;
-        margin: 5px 0 0px 15px;
+        margin-left: 15px;
         padding: 0;
     }
     
     .chatbar-container {
-        padding: 0 0 27px 0;
-        border-top: 5px solid #000;
-        border-bottom: 5px solid #f28500;
+        padding: 0 0 7vw 0;
+        border-top: 1.4vw solid #000;
+        border-bottom: 1.4vw solid #f28500;
     }
 
     .chat-bar {
-        border-bottom: 5px solid #000;
+        border-bottom: 1.4vw solid #000;
     }
 
     .chat-bar button {
-        width: 28px;
+        width: 7vw;
         margin-bottom: 0px;
         margin-right: 4.5%;
     }
 
     .chat-bar p {
+        font-size: 5vw;
         border: none;
         padding: 0;
-        padding-top: 5px;
-        padding-bottom: 5px;
+        padding-top: 1.4vw;
+        padding-bottom: 1.4vw;
         width: 100%;
         padding-right: 30px;
         font-weight: 600;
         margin: 0;
-        padding-left: 4.5%;
+        padding-left: 4vw;
     }
 
     .chat-bar p:focus {
@@ -1683,8 +1783,9 @@ input:focus:-ms-input-placeholder {
     }
 
     .typing-indicator {
-        bottom: 2px;
-        left: 10px;
+        font-size: 4vw;
+        bottom: 0.6vw;
+        left: 2vw;
         margin: 0;
         white-space: nowrap;
     }
@@ -1697,13 +1798,19 @@ input:focus:-ms-input-placeholder {
         font-size: 4vw;
     }
 
+    .new-messages-alert svg {
+        width: 4vw;
+        margin-right: 2.8vw;
+    }
+
     .disconnect-alert {
         font-size: 4vw;
-        padding: 0 10px;
+        padding: 0 3vw;
     }
 
     .disconnect-alert img {
         width: 4.5vw;
+        margin-right: 2.8vw;
     }
 }
 
