--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -133,6 +133,14 @@
                     </div>
                     <div id="dashboard-patch-notes" class="hidden">
                         <div class="dashboard-patch">
+                            <div class="dashboard-patch-title">2.0.0 Patch Notes [The Frankenstein Update]</div>
+                            <ul class="dashboard-notes">
+                                <li>New messages in the Home Screen now update LIVE.</li>
+                                <li>Eradicated the last remenants of the old 2D UI.</li>
+                                <li>Tablet home screen fixed to get rid of a minor visual imperfection.</li>
+                            </ul>
+                        </div>
+                        <div class="dashboard-patch">
                             <div class="dashboard-patch-title">1.1.0 Patch Notes [IPad Update]</div>
                             <ul class="dashboard-notes">
                                 <li>Posts are now IPad friendly. Request more device support at support@bantopia.com.</li>
