--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -523,12 +523,14 @@ input:focus:-ms-input-placeholder {
     display: inline-flex;
     padding-left: 15px;
     border-top: 5px solid #000;
+    overflow-x: hidden;
 }
 
 .recent-message {
     font-family: 'Poppins', sans-serif;
     font-size: 1.6vw;
     color: #000;
+    white-space: nowrap;
 }
 
 .recent-message-bracket {
@@ -543,6 +545,39 @@ input:focus:-ms-input-placeholder {
 
 .post-icon-active {
     filter: none;
+}
+
+.bottom-stats {
+    display: flex;
+    flex-direction: row;
+    border-top: 5px solid #000;
+    gap: 5px;
+    background-color: #000;
+}
+
+.bottom-stats {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    color: #000000;
+    font-weight: 700;
+}
+
+.bottom-stats div {
+    flex: 1;
+    padding: 0 5px;
+    background-color: white;
+}
+
+.last-author {
+    color: #f28500;
+}
+
+.last-active-time {
+    color: #000;
+}
+
+.new-message-number {
+    color: #f28500;
 }
 
 .side-title {
@@ -997,8 +1032,12 @@ input:focus:-ms-input-placeholder {
         display: none;
     }
 
-    .post:nth-child(1) {
-        margin-top: 0;
+    .post-scroll {
+        padding-top: 15px;
+    }
+
+    .post-label-box:nth-child(1) {
+        border-top: 5px solid #000;
     }
 
     .recent-message {
