--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div href="" class="post-box">
-                    <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="post nick-left-in nick-right-in border">
+                    <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="post nick-left-in nick-right-in border" id="pst_{{post.post_code}}">
                         {% if post.post_type == "DE" %}
                         <h1 class="post-title"><span class="post-title-DE">Declaration:</span> {{post.post_title | truncatesmart:60}}</h1>
                         {% elif post.post_type == "TH" %}
@@ -97,13 +97,17 @@
                         <h4 class="post-paragraph">{{post.post_desc | truncate:40}}</h4>
                         {% if post.last_message %}
                             {% if post.pk in user_notified_set or not user.is_authenticated %}
-                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon post-icon-active"><h1 class="recent-message">New Message<span class="recent-message-content">:  <span class="recent-message-bracket">{</span>{{ post.last_message|truncatesmart:35 }}<span class="recent-message-bracket">}</span></span></h1></div>
+                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon post-icon-active"><h1 class="recent-message"><span class="recent-message-crier">New Message</span>:  <span class="recent-message-bracket">{</span><span class="recent-message-content">{{ post.last_message|truncatesmart:35 }}</span><span class="recent-message-bracket">}</span></h1></div>
                             {% else %}
-                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon"><h1 class="recent-message">Last Message<span class="recent-message-content">:  <span class="recent-message-bracket">{</span>{{ post.last_message|truncatesmart:35 }}<span class="recent-message-bracket">}</span></span></h1></div>
+                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon"><h1 class="recent-message"><span class="recent-message-crier">Last Message</span>:  <span class="recent-message-bracket">{</span><span class="recent-message-content">{{ post.last_message|truncatesmart:35 }}</span><span class="recent-message-bracket">}</span></h1></div>
                             {% endif %}
                         {% else %}
                         <div class="message-bar"><h1 class="recent-message"><span>This chat is totally empty!</span></h1></div>
                         {% endif %}
+                        <!--
+                        <div class="bottom-stats">
+                            <div class="last-active-stat">Last Active: <span class="last-active-time">7min ago</span></div>
+                        </div>-->
                         <div class="right-post-side">
                             <div class="right-post-face"></div>
                         </div>
