Quick fix to Version 2.0.0

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1283,7 +1283,7 @@ input:focus:-ms-input-placeholder {
         white-space: nowrap;
     }
 
-    .recent-message-content {
+    .recent-message-body {
         display: none;
     }
 
