--- a/templates/post/drafts.html
+++ b/templates/post/drafts.html
@@ -30,7 +30,7 @@
     <meta property="twitter:title" content="Bantopia: The Social Forum" />
     <meta property="twitter:description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
     <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
-    <title>{{ tab_text }} | Bantopia</title>
+    <title>DraftCraft | Bantopia</title>
 </head>
 <body>
     <div class="drafts-page">
