--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <meta property="twitter:title" content="Bantopia: The Social Forum" />
     <meta property="twitter:description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
     <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
-    <title>{{ tab_text }} | Bantopia</title>
+    <title>Central Nexus | Bantopia</title>
 </head>
 <body>
     <div class="navbar-container">
@@ -50,13 +50,13 @@
                 <a href="/post/write" class="post-link"><span>#Post</span></a>
                 {% if user.is_authenticated %}
                 <a href="/{{ user.display_name }}/dashboard" class="dashboard-link"><span><span class="dashboard-your">Your<br></span>Dashboard</span></a>
-                <a href="/{{ user.display_name }}/dashboard" id="splash-text">{{ splash_text }}</a>
+                <a href="/{{ user.display_name }}/dashboard" id="splash-text">Better than Reddit?</a>
                 {% else %}
                 <div class="account-links">
                     <a href="login/"><span>Log in</span></a>
                     <a href="create-profile/"><span>Create Profile</span></a>
                 </div>
-                <a href="create-profile/" id="splash-text">{{ splash_text }}</a>
+                <a href="create-profile/" id="splash-text">Better than Reddit?</a>
                 {% endif %}
             </div>
         </div>
@@ -77,6 +77,11 @@
                 </div>
                 <div href="" class="post-box">
                     <a href="/ws/{{post.post_code}}/{{post.post_slug}}/chat" class="post nick-left-in nick-right-in border" id="pst_{{post.post_code}}">
+                        <div class="top-stats">
+                            <div class="last-active-stat"><span class="last-active-crier">Last Active: </span><span class="last-active-time">{{ post.last_message.datetime_sent|convert_to_datetime|briefLongAgo }}</span></div>
+                            <div class="typing-stat"><span></span></div>
+                            <div class="message-recoil-stat"><div class="recoil-bar"></div></div>
+                        </div>
                         {% if post.post_type == "DE" %}
                         <h1 class="post-title"><span class="post-title-DE">Declaration:</span> {{post.post_title | truncatesmart:60}}</h1>
                         {% elif post.post_type == "TH" %}
@@ -97,17 +102,13 @@
                         <h4 class="post-paragraph">{{post.post_desc | truncate:40}}</h4>
                         {% if post.last_message %}
                             {% if post.pk in user_notified_set or not user.is_authenticated %}
-                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon post-icon-active"><h1 class="recent-message"><span class="recent-message-crier">New Message</span><span class="recent-message-body">:  <span class="recent-message-bracket">{</span><span class="recent-message-content">{{ post.last_message|truncatesmart:35 }}</span><span class="recent-message-bracket">}</span><span></span></h1></div>
+                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon post-icon-active"><h1 class="recent-message"><span class="recent-message-crier">New Message</span><span class="recent-message-body">:  <span class="recent-message-bracket">{</span><span class="recent-message-content">{{ post.last_message.content|truncatesmart:35 }}</span><span class="recent-message-bracket">}</span><span></span></h1></div>
                             {% else %}
-                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon"><h1 class="recent-message"><span class="recent-message-crier">Last Message</span><span class="recent-message-body">:  <span class="recent-message-bracket">{</span><span class="recent-message-content">{{ post.last_message|truncatesmart:35 }}</span><span class="recent-message-bracket">}</span></span></h1></div>
+                            <div class="message-bar"><img src="{% static 'images/icon.svg' %}" alt="" class="post-icon"><h1 class="recent-message"><span class="recent-message-crier">Last Message</span><span class="recent-message-body">:  <span class="recent-message-bracket">{</span><span class="recent-message-content">{{ post.last_message.content|truncatesmart:35 }}</span><span class="recent-message-bracket">}</span></span></h1></div>
                             {% endif %}
                         {% else %}
                         <div class="message-bar"><h1 class="recent-message"><span>This chat is totally empty!</span></h1></div>
                         {% endif %}
-                        <!--
-                        <div class="bottom-stats">
-                            <div class="last-active-stat">Last Active: <span class="last-active-time">7min ago</span></div>
-                        </div>-->
                         <div class="right-post-side">
                             <div class="right-post-face"></div>
                         </div>
@@ -185,6 +186,7 @@
                 </ul>
             </div>
         </div>
+        <div class="home-ping">Ping: <span class="home-ping-reading" id="home-ping-reading">56ms</span></div>
         <div class="bottom">
             <div class="new-user-links">
                 {% if user.is_authenticated %}
@@ -198,5 +200,13 @@
     </div>
 </body>
 <script src="{% static 'js/index.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/sp-supermarquee@latest/dist/SuperMarqueeWC.min.js"></script>
+<script src="
+https://cdn.jsdelivr.net/npm/howler@2.2.4/dist/howler.min.js
+"></script>
+<script>
+    var notifSound = new Howl({
+      src: ['{% static "audio/notif.mp3" %}'],
+      html5: true
+    });
+</script>
 </html>
