--- a/templates/post/write.html
+++ b/templates/post/write.html
@@ -30,7 +30,7 @@
     <meta property="twitter:description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
     <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
     <meta name="theme-color" content="#ffffff">
-    <title>{{ tab_text }} | Bantopia</title>
+    <title>Masterpiece Maker | Bantopia</title>
 </head>
 <body>
     <div class="write-page">
