--- a/templates/profile/edit-profile.html
+++ b/templates/profile/edit-profile.html
@@ -28,7 +28,7 @@
     <meta property="twitter:title" content="Bantopia: The Social Forum" />
     <meta property="twitter:description" content="Chat and argue with people across the globe regarding any topic you choose, from video-games to bio-medical science, enjoying the Internet in its purest form. It’s completely anonymous, so create a quick profile and experience it all!" />
     <meta property="twitter:image" content="{% static 'images/Poster.png' %}" />
-    <title>{{ tab_text }} | Bantopia</title>
+    <title>Metamorph | Bantopia</title>
 </head>
 <body>
     <div class="edit-container">
